Updates from Overleaf

--- a/report1.tex
+++ b/report1.tex
@@ -18,6 +18,10 @@
 
 % Set the article type
 \articletype{Research Article}
+
+
+
+
 \begin{document}
 
 \title{Caracterización de sistemas de formación de imágenes}
@@ -26,10 +30,17 @@
 
 \address{\authormark{1}Universidad Complutense de Madrid, Madrid, CP 28040, España}
 
+%Índice,
+\tableofcontents
+\newpage
+
 \section{Introducción}
 En esta práctica vamos a caracterizar un sistema de formación de imágenes mediante la determinación experimental de su función de transferencia de modulación (MTF). Para ello utilizaremos un método directo (el test de barras) y un método indirecto (el test de borde). La MTF nos aportará información sobre el rango de frecuencias espaciales, estimar su resolución y el contraste de la imagen a estudiar.
 
 Para tal fin anteriormente mencionado tuvimos que entender la respuesta a un impulso, la función de transferencia de modulación de la imagen, el poder distinguir si nuestro sistema es lineal e invariante con respecto a su desplazamiento y sus descripciones.
+
+
+
 
 \section{Marco práctico}
 El sistema cuya MTF mediremos consiste en un objetivo de microscopio con apertura numérica $\textrm{NA} = 0,25$ y un aumento $10\times$ (F10),
@@ -37,9 +48,12 @@ y una cámara CCD con un tamaño de píxel de $s=4,65 \unit{\micro\meter}$.
 Las imágenes captadas por la cámara se visualizarán en la pantalla del PC.
 A continuación se detallará el procedimiento práctico realizado utilizando los dos métodos de medición de la MTF.
 
+
 \subsection{Medida de MTF mediante el test de barras (método directo)}\label{sec:metodo-directo}
 
-Se utilizó el test USAF 1951 (Fig.~\ref{fig:usaf1951}) como imagen general en la que se captaron fotografías de  distintos elementos de rendijas de la diapositiva de la Fig.~\ref{fig:usafpic} presentada a continuación. Se controla la exposición para obtener los colores grises en cada muestra de imagen sin sobre-exposición.
+Este método consiste en medir el contraste para varios conjuntos de barras de distintas frecuencias de la imagen obtenida. El contraste de un conjunto de barras nos da directamente el valor la MTF del sistema para la frecuencia de ese conjunto. Representando los contrastes frente a las frecuencias obtenemos la función MTF(u), y realizando un ajuste de los datos se puede determinar la frecuencia de corte.
+
+Se utilizó el test USAF 1951 (Fig.~\ref{fig:usaf1951}) como imagen general en la que se captaron fotografías de  distintos conjuntos de barras de la diapositiva de la Fig.~\ref{fig:usaf1951} presentada a continuación. Se controla la exposición para obtener los colores grises en cada muestra de imagen sin sobre-exposición.
 
 \begin{figure}[h]
 	\centering
@@ -47,22 +61,9 @@ Se utilizó el test USAF 1951 (Fig.~\ref{fig:usaf1951}) como imagen general en l
 	\caption{Test USAF 1951.}\label{fig:usaf1951}
 \end{figure}
 
-Posterior a la toma de imágenes, se obtiene a través de estas imágenes un perfil ortogonal a las rendijas de contraste, para cada una de las distintas imágenes. Los resultados se discutirán en la sección~\ref{sec:mtf-directo} del apartado de Resultados experimentales. Este perfil es obtenido mediante un software diseñado en la plataforma de MATLAB que se nos fue otorgado.
+A través de las imágenes tomadas (figura ~\ref{fig:group:usaf}) se obtiene un perfil ortogonal a las rendijas de contraste, para cada una de las distintas imágenes. Los resultados se discutirán en la sección~\ref{sec:mtf-directo} del apartado de Resultados experimentales. Este perfil es obtenido mediante un software diseñado en la plataforma de MATLAB.
 
-
-\subsection{Medida de la MTF mediante el test de borde (método indirecto)}\label{sec:description:indirecto}
-
-Se obtiene la imagen de la misma manera que el apartado anterior, pero esta vez de una única barra que abarque el campo completo de visión, dividiendo la imagen ortogonalmente como se puede ver en la Fig.~\ref{fig:perfil:img}
-
-De la misma manera se obtiene un perfil de la imagen, por medio del software en MATLAB, los resultados se presentarán en la sección de resultados correspondiente.
-
-
-\section{Resultados experimentales}\label{sec:resultados}
-
-\subsection{Resultados medidas de la MTF mediante el test de barras (método directo)}\label{sec:mtf-directo}
-Se realizó el procedimiento explicado con anterioridad por cada imagen que se obtuvo del test de USAF de referencia. A continuación se presenta algunas de las imágenes estudiadas:
-
-\begin{figure}
+\begin{figure}[h]
 \centering
 \begin{subfigure}[t]{0.576\textwidth}\centering
 	\includegraphics[width=\textwidth]{/imaglineas.jpg}
@@ -75,7 +76,9 @@ Se realizó el procedimiento explicado con anterioridad por cada imagen que se o
 \end{subfigure}
 \caption{Fotos tomadas durante la práctica}\label{fig:group:usaf}
 \end{figure}
-Procedimiento para sacar el contraste y la frecuencia a partir del perfil de un segmento de líneas: Se obtiene dos posiciones tan distantes como se pueda de dos mínimos de las barras. Se mide la distancia en píxeles entre ellas ($x_{\max} - x_{\min} $), se cuenta el número de periodos entre ellas, que nos permite calcular $T = \flatfrac{(x_{\max} - x_{\min)} }{N_{\textrm{periodos}}}$. A continuación,  se toma los máximos y mínimos de altura $y_{\max}$, $y_{\min}$.
+
+
+Del perfil de intensidad se obtienen el contraste y la frecuencia a partir del perfil de un segmento de líneas es el siguiente: Se obtiene dos posiciones tan distantes como se pueda de dos mínimos de las barras. Se mide la distancia en píxeles entre ellas ($x_{\max} - x_{\min} $) y se cuenta el número de periodos entre ellas, lo que nos permite calcular el periodo en píxeles como $T = \flatfrac{(x_{\max} - x_{\min)} }{N_{\textrm{periodos}}}$. A continuación,  se toma los máximos y mínimos de altura $y_{\max}$, $y_{\min}$.
 
 El contraste se ha obtenido a partir de la expresión:
 \nopagebreak
@@ -87,18 +90,37 @@ El contraste se ha obtenido a partir de la expresión:
 La frecuencia se calcula como:
 \nopagebreak
 \begin{equation}
-	\nu = \frac{1825}{T}\ \textrm{ciclos/mm},\quad\textrm{TODO: QUE es 1825??}\label{eq:frecuencia}
+	\nu = \frac{1825}{T}\ \textrm{ciclos/mm}\label{eq:frecuencia}
 \end{equation}
 
-Donde el periodo, $T$, se calcula de acuerdo a la gráfica del perfil obtenida en el estudio de cada imagen. Un ejemplo de estas gráficas se muestra en la figura \ref{fig:perfil:example}.
+Donde el periodo, $T$, de acuerdo a la gráfica del perfil obtenida en el estudio de cada imagen.
 
-\begin{figure}[!h]
+
+
+\subsection{Medida de la MTF mediante el test de borde (método indirecto)}\label{sec:description:indirecto}
+
+Se obtiene la imagen de la misma manera que el apartado anterior, pero esta vez de una única barra que abarque el campo completo de visión como se puede ver en la Fig.~\ref{fig:perfil:img}. Con la imagen del borde obtenida, obtenemos su perfil de intensidad (la "respuesta a una escalón" o SR) y posteriormente su derivada ("line spread function", o LSF). La transformada de Fourier de la LSF nos da la MTF del sistema, a partir de la cual estimamos su frecuencia de corte.
+
+Esto es debido a que la función $\delta(x)$ es la derivada de la step function, $s(x)$. Como distribución, podemos usar este hecho para calcular la LSF, encontrando primero la respuesta a un borde. Realizando una estimación de la derivada, podemos obtener la MTF de una manera más rápida.
+
+Los resultados se presentarán en la sección de resultados correspondiente.
+
+
+
+
+
+\section{Resultados experimentales}\label{sec:resultados}
+
+\subsection{Resultados medidas de la MTF mediante el test de barras (método directo)}\label{sec:mtf-directo}
+
+Un ejemplo de perfil estudiado para un conjunto de barras se muestra en la figura \ref{fig:perfil:example}.
+
+\begin{figure}
 	\includegraphics[width=\textwidth]{profile-lines.pdf}
 	\caption{Perfil de un segmento de líneas}\label{fig:perfil:example}
 \end{figure}
 
-
-En la tabla \ref{table:perfilintensidad} se recogen medidas tomadas del perfil de intensidad para distintos conjuntos de barras
+En la tabla \ref{table:perfilintensidad} se recogen las medidas tomadas de los perfiles de intensidad para distintos conjuntos de barras, así como la frecuencia (líneas/mm) y el contraste calculados según las ecuaciones ~\ref{eq:frecuencia} y ~\ref{eq:contraste}.
 
 \begin{table}[hbp]
 	\centering
@@ -107,22 +129,33 @@ En la tabla \ref{table:perfilintensidad} se recogen medidas tomadas del perfil d
 		Barras & $y_{\min} (px)$ & $y_{\max} (px)$ & Contraste & $x_{\min} (px)$ & $x_{\max} (px)$ & N Periodos & periodo (px) &  $\flatfrac{\textrm{ciclos}}{\textrm{mm}}$%
 		\\\midrule%
 	]{practica1/MTF/Profiles.csv}
-	\caption{Datos del perfil de intensidad. $y$: intensidad. $x$. El contraste se ha obtenido a partir de la ecuación~\ref{eq:contraste}. La frecuencia se ha obtenido a través de la ecuación~\ref{eq:frecuencia}. Como se obtienen los periodos se explica visualmente en la Fig.~\ref{fig:perfil:example}}%
+	\caption{Datos de los perfiles de intensidad. $y$: intensidad. $x$. El contraste se ha obtenido a partir de la ecuación~\ref{eq:contraste}. La frecuencia se ha obtenido a través de la ecuación~\ref{eq:frecuencia}. Como se obtienen los periodos se explica visualmente en la Fig.~\ref{fig:perfil:example}}%
 	\label{table:perfilintensidad}
 \end{table}
+
+Representando el contraste de la imagen frente a la frecuencia (cliclos/mm) se obtiene la MTF del sistema (figura $~\ref{fig:mtf-directo}$).
+
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.5]{MTF-directo.png}
+    \caption{MTF del sistema obtenida mediante el test de barras (método directo). Ajuste: $C = 1,05 \cdot 10^{-5} u^2 + 1,52 \cdot 10^{-3} u + 0,91$, donde u es la frecuencia y C el contraste.}
+    \label{fig:mtf-directo}
+\end{figure}
+
+El sistema se comporta como un filtro pasa baja. Las frecuencias superiores a la frecuencia de corte, con una transferencia teóricamente nula, no son captadas a la salida del sistema. En nuestro estudio comprobamos que los conjuntos de barras de más de 250-300 líneas/mm ya no aparecían resueltos en la imagen, aunque la presencia de ruido impedía visualizar frecuencias mayores. 
+
+La frecuencia de corte del sistema según la teoría es mayor. En la sección ~\ref{sec:cuestion:mtf} se muestra la gráfica de la MTF del sistema calculada mediante un modelo teórico. Según predice la teoría, esta MTF se puede aproximar a una función cuadrática. Se realizó por tanto un ajuste cuadrático de los datos experimentales, obteniendo la ecuación $C = 1,05 \cdot 10^{-5} u^2 + 1,52 \cdot 10^{-3} u + 0,91$, con un coeficiente $R^2$ de $0,964$. Esta función tiene su mínimo en un valor de la frecuencia de $u = 263$ líneas/mm, el cual dista mucho de la frecuencia de corte teórica de 1000 líneas/mm (sección ~\ref{sec:cuestion:mtf}). Esta discrepancia puede deberse al ruido, de manera que se pueden haber tomado valores de los máximos y mínimos de los perfiles que no correspondían con los de la señal de interés (la imagen) sino con picos de ruido. Tomando un valor de los máximos y de los mínimos promedio se eliminaría este problema y probablemente se obtendría un mejor ajuste de los datos.
+
+Este método permite la medida directa de la respuesta del sistema a cada frecuencia determinada, lo cual puede ser de utilizada cuando se requiera un comportamiento específico a frecuencias concretas. En la siguiente sección utilizaremos otro método que permite calcular la MTF del sistema experimentalmente para más frecuencias de una forma más rápida.
 
 
 
 
 
 \subsection{Resultados Medida de la MTF mediante el test de borde (método indirecto)}\label{sec:resultados:indirecto}
-Con la imagen del borde obtenida de la imagen patrón USAF de manera que la cámara al tomar la imagen no se encuentre saturada, ingresamos la imagen resultante en el análisis de perfil de intensidad y obtenemos su derivada.
 
-Esto Debido a que la función $\delta(x)$ es la derivada de la step function, $s(x)$, como distribución, podemos usar este hecho para calcular la LSF, encontrando primero la respuesta a un borde, y realizando una estimación de la derivada, podemos obtener la MTF de una manera más rápida.
 
-Se genera la MTF a partir de la LSF y se estima la frecuencia de corte del sistema.
-
-A continuación se muestra los resultados de manera gráfica para mejor interpretación:
+En la figura ~\ref{fig:perfil} se muestran los resultados de manera gráfica para mejor interpretación.
 \begin{figure}[hptb]
 	\centering
 	\begin{subfigure}[t]{0.35\textwidth}
@@ -138,6 +171,24 @@ A continuación se muestra los resultados de manera gráfica para mejor interpre
 	\end{subfigure}
 	\caption{Perfil de intensidad de una franja grande utilizada para el método indirecto para obtener el MTF, como se describe en la sección~\ref{sec:description:indirecto}}\label{fig:perfil}
 \end{figure}
+
+Mediante un programa de MATLAB podemos calcular fácilmente la transformada de Fourier de la LSF mostrada en la figura ~\ref{fig:perfil:graph} (gráfica derecha). Esta TF es la MTF del sistema (figura ~\ref{fig:mtf-indirecto}).
+
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.5]{/MTF-indirecto.png}
+    \caption{MTF del sistema obtenida mediante el test de borde (método indirecto)}
+    \label{fig:mtf-indirecto}
+\end{figure}
+
+La frecuencia de corte estimada con este método indirecto se sitúa entre 200 y 300 líneas/mm. Ambos métodos arrojan resultados parecidos, aunque no concuerdan con los predicho por la teoría. Comparando las gráficas de ambos métodos (figuras ~\ref{fig:mtf-directo} y ~\ref{fig:mtf-indirecto}), vemos que el rango de frecuencias que pasan por el sistema es aproximadamente el mismo. Sin embargo, la caída del valor de la MTF es más acusada en el caso de este último método del test de borde. Esto evidencia que en las medidas de los máximos y mínimos de los perfiles de intensidad en el método directo se tomaron los valores más extremos del perfil, obteniéndose un contraste mayor que el contraste real de la imagen. Habiendo tomado como máximo un valor promedio de todos los máximos, y lo mismo para los mínimos, las dos gráficas habrían salido probablemente más parecidas aún.
+
+El método del test de borde tiene la ventaja respecto al método de barras de permitirnos visualizar la MTF para un mayor rango de frecuencias. Este puede resultar más útil que el método directo para caracterizar sistemas en un rango completo de frecuencias de forma rápida. 
+
+
+
+
+
 
 \section{Cuestiones}
 
@@ -183,11 +234,104 @@ Por lo tanto, la función $H_{i}(u)$ se puede obtener con el esquema descrito en
 	\caption{Diagrama del proceso para obtener la PTF de intensidad\ref{sec:cuestion:incoherente} }\label{fig:transformacion}
 \end{figure}
 
-\subsection{Para un sistema parecido al usado en la práctica:}
+
+\subsection{Para un sistema parecido al usado en la práctica:}\label{sec:cuestion:mtf}
 	\begin{enumerate}
 		\item Estimar la frecuencia de corte de la cámara CCD, $u_{c}^{(CCD)}$, en líneas por milímetro.
+		
+	    La resolución de la cámara CCD está limitada por su tamaño de píxel. La frecuencia límite de un conjunto de barras que es capaz de resolver es aquella en la que cada barra tiene un tamaño de 1 px. La frecuencia de este conjunto de barras es la frecuencia de corte de la cámara, y viene dada por:
+	    
+	    \begin{equation}
+	        u_c^{(CCD)} = \frac{1}{2s} = 108 \flatfrac{ciclos}{mm}
+	    \end{equation}
+		
+		Donde $s=4,65 \mu m$ es el tamaño del píxel. Esta frecuencia corresponderá a la imagen formada por el objetivo, la cual está aumentada x10. Esto se tendrá en cuenta para calcular la MTF del sistema entero. La $u_^{(CCD)}$, no obstante, se da como la frecuencia de la imagen, que hace de objeto para la cámara.
+		
 		\item Estimar la frecuencia de corte $u_{c}^{(Obj)}$ del objetivo $10\times$ para luz incoherente (la longitud de onda media $\lambda=500\,\unit{\nano\metre}$).
+		
+		La frecuencia de corte del objetivo viene dada por:
+		
+		\begin{equation}
+		    u_c^{(Obj)} = \frac{2 NA}{\lambda} = 1000 \flatfrac{ciclos}{mm}
+		\end{equation}
+		
+		Donde $NA=0,25$ es la apertura numérica del objetivo en el espacio objeto. Al igual que para el cálculo de $u_^{(CCD)}$, esta frecuencia se da como la frecuencia del objeto, que en este caso es el propio objeto del sistema, la diapositiva del test USAF 1951.
+		
 		\item Tomando estos valores y suponiendo que la PSF del objetivo y de la cámara se aproximan por la función $|\sinc(ax)|^2$, dibujar la MTF de cada uno de los elementos y del sistema compuesto.
+		
+		La MTF de cada elemento es la transformada de Fourier (TF) normalizada de la PSF $|\sinc(ax)|^2$. El parámetro ''a'' será la frecuencia de corte $a=u_c^{(Obj)}$ en el caso del objetivo. Para la cámara, $a=10 u_c^{(CCD)}$, puesto que la imagen formada por el objetivo (el objeto de la cámara) está aumentada x10. De esta manera obtenemos la MTF(u) de la cámara en función de las frecuencias (u) de la diapositiva del test USAF 1951, igual que la MTF(u) del objetivo. Así, la MTF del sistema será el producto las MTF de los dos elementos del mismo. 
+		
+		\begin{enumerate}
+		    \item MTF del objetivo y la cámara CCD:
+		    
+		    La TF de $|\sinc(ax)|^2$ es la función triangular con un factor $\flatfrac{1}{|a|}$:
+    		    \begin{equation}
+    		        \wedge(u)= \left\{ \begin{array}{lcc}
+                 \frac{1}{|a|}(1-|\frac{u}{a}|) &   si  & |u| \leq 1 \\
+                 \\ 0 &  si & |u| \geq 1 \\
+                 \end{array}
+                \right.
+		    \end{equation}
+		    
+		    La MTF para cada elemento es $MTF(u) = \frac{\wedge(u)}{\wedge(0)}$, y $\wedge(0) = \frac{1}{|a|}$. Por tanto, para el objetivo quedaría:
+		        \begin{equation}
+    		       MTF^{(Obj)}(u)= \left\{ \begin{array}{lcc}
+                     1-|\frac{u}{1000}| &   si  & |u| \leq 1 \\
+                     \\ 0 &  si & |u| \geq 1 \\
+                     \end{array}
+                    \right.
+		    \end{equation}
+		    
+		    Y para la cámara CCD: 
+		    	\begin{equation}
+    		       MTF^{(CCD)}(u)= \left\{ \begin{array}{lcc}
+                     1-|\frac{u}{1080}| &   si  & |u| \leq 1 \\
+                     \\ 0 &  si & |u| \geq 1 \\
+                     \end{array}
+                    \right.
+		    \end{equation}
+		    
+		    Véase que la MTF de la cámara, $\wedge^{(CCD)}(u)$, está en función de las frecuencias del objeto del sistema (la diapositiva USAF 1951), ya que vamos a obtener la MTF del sistema multiplicando las dos MTF.
+		    
+		    
+		    \item MTF del sistema y representación gráfica
+		    
+		    La MTF del sistema viene dada por la ecuación ~\ref{eq:mtf-teorica}. En la figura ~\ref{fig:mtf-teorica} se muestran las MTF de los elementos y la del sistema conjunto.
+		    
+		    \begin{equation}
+		        MTF(u) = MTF^{(Obj)}(u) \cdot MTF^{(CCD)}(u)
+		    \end{equation}
+		    \begin{equation}
+		        MTF(u)= \left\{ \begin{array}{lcc}
+                     (1-|\frac{u}{1080}|)(1-|\frac{u}{1000}|) &   si  & |u| \leq 1 \\
+                     \\ 0 &  si & |u| \geq 1 \\
+                     \end{array}
+                    \right.
+                    \label{eq:mtf-teorica}
+		    \end{equation}
+		        
+		    
+		    \begin{figure}
+		        \centering
+		        \includegraphics[scale=0.45]{/MTF-teorica.png}
+		        \caption{MTF teóricas de los elementos del sistema y del sistema compuesto}
+		        \label{fig:mtf-teorica}
+		    \end{figure}
+		    
+		    Desarrollando el producto obtenemos la ecuación cuadrática que mencionamos en el estudio del método directo, aunque con distintos coeficientes:
+		    
+		    \begin{center}
+		        \begin{math}
+		        MTF(u) = 9,3 \cdot 10^{-7} u^2 + 1,9 \cdot 10^{-3} u + 1
+		        \end{math}
+		    \end{center}
+		    
+		    La MTF del sistema tiene la misma forma que las obtenidas experimentalmente, aunque con una frecuencia de corte mayor. Esta viene determinada por la frecuencia de corte del objetivo (1000 líneas/mm), que es la más restrictiva de las frecuencias de corte de los dos elementos. Esto significa el tamaño de píxel de la cámara es lo suficientemente grande como para adquirir todas las frecuencias espaciales de las imágenes formadas por el objetivo. 
+		    
+		    Que la frecuencia de corte teórica sea tan alta respecto a la del experimento (1000 líneas/mm frente a unas 200-300 líneas/mm) puede deberse a diversas causas relacionadas con la no idealidad de la realidad experimental: ruido, aberraciones, etc., que no se han tenido en cuenta en el cálculo teórico. Concretamente, el ruido de las imágenes impidió diferenciar máximos y mínimos en los perfiles de intensidad de conjuntos de barras de mayor frecuencia, aunque estos fueron bien resueltos por la cámara CCD. 
+		    
+		\end{enumerate}
+		
 	\end{enumerate}
 
 
@@ -302,6 +446,7 @@ Por otro lado, la deconvolución de Richardson-Lucy, al ser procedimiento iterat
 	\end{tabular}
 	\caption{Matriz de los filtros realizados para recuperar las imágenes con ruido añadido simulado. Cada fila d se corresponde a una figura de \ref{fig:convolutions} (a--d), cada columna indica un método de recuperación}
 \end{figure}
+
 
 %%%%%%%%%% If using BibTeX:
 \bibliography{bibliography}
